--- a/MobileEvents/app/src/main/res/values/strings.xml
+++ b/MobileEvents/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">ExamenTodo</string>
+    <string name="app_name">ExamenEvent</string>
     <string name="offline">OFFLINE</string>
     <string name="online">ONLINE</string>
     <string name="loading">Loading</string>
